--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="dev.intelligrape.igdroid"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="9" />
+	package="dev.intelligrape.igdroid" android:versionCode="1"
+	android:versionName="1.0">
+	<uses-sdk android:minSdkVersion="9" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".IGDroidActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-    </application>
+	<application android:label="@string/app_name" android:icon="@drawable/logoig">
+		<activity android:name="IGDroidActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".ContactInfoActivity"></activity>
+		<activity android:name=".ContactDetailActivity"
+			android:label="@string/contactDetails"></activity>
+		<activity android:name=".ContactMailActivity" android:label="@string/contactDetailsMail"></activity>
+	</application>
 </manifest>
