--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="dev.intelligrape.igdroid" android:versionCode="1"
 	android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="9" />
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
 
 	<application android:label="@string/app_name" android:icon="@drawable/logoig">
 		<activity android:name="IGDroidActivity" android:label="@string/app_name">
