--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
 	package="com.intelligrape.apps.igdroid" android:versionCode="1"
 	android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
+	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
 	<application android:label="@string/app_name" android:icon="@drawable/logoig">
 		<activity android:name="IGDroidActivity" android:label="@string/app_name">
