--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
 	android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
 	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET" />
+	
 
 	<application android:label="@string/app_name" android:icon="@drawable/logoig">
 		<activity android:name="IGDroidActivity" android:label="@string/app_name">
