--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,25 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.intelligrape.apps.igdroid" android:versionCode="1"
 	android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10" />
-	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10" />
+	<uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.INTERNET" />
 
 
 	<application android:label="@string/app_name" android:icon="@drawable/ig_logo">
-		<activity android:name=".Main" android:label="@string/app_name">
+		<activity android:name=".MainActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ContactInfoActivity"></activity>
+		<activity android:name=".ContactInfoActivity" android:label="@string/contact_us_label"></activity>
 		<activity android:name=".DashboardActivity"></activity>
-		<activity android:name=".HowWeWorkActivity"></activity>
-		<activity android:name=".OurTechnologyActivity"></activity>
-		<activity android:name=".ContactDetailActivity"
-			android:label="@string/contactDetails"></activity>
-		<activity android:name="com.intelligrape.apps.igdroid.ContactMailActivity"
-			android:label="@string/contactDetailsMail"></activity>
+		<activity android:name=".HowWeWorkActivity" android:label="@string/how_we_work_label"></activity>
+		<activity android:name=".OurTechnologyActivity" android:label="@string/our_technology_label"></activity>
+		<activity android:name=".AboutUsActivity" android:label="@string/about_us_label"></activity>
+		<activity android:name=".ContactDetailActivity" android:label="@string/intelligrape_contact_us_label"></activity>
+		<activity android:name="com.intelligrape.apps.igdroid.ContactMailActivity" android:label="@string/contactDetailsMail"></activity>
 	</application>
 </manifest>
