--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.intelligrape.apps.igdroid" android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="1.0"
+	android:installLocation="preferExternal"
+	>
 	<uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10" />
 	<uses-permission android:name="android.permission.CALL_PHONE"/>
 	<uses-permission android:name="android.permission.INTERNET" />
-
-
-	<application android:label="@string/app_name" android:icon="@drawable/ig_logo">
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>	    
+	<application android:label="@string/app_name" android:icon="@drawable/ig_logo">	
 		<activity android:name=".MainActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -17,9 +19,11 @@
 		<activity android:name=".ContactInfoActivity" android:label="@string/contact_us_label"></activity>
 		<activity android:name=".DashboardActivity"></activity>
 		<activity android:name=".HowWeWorkActivity" android:label="@string/how_we_work_label"></activity>
+		<activity android:name=".LocateUsActivity" android:label="@string/locate_us_label"></activity>
 		<activity android:name=".OurTechnologyActivity" android:label="@string/our_technology_label"></activity>
 		<activity android:name=".AboutUsActivity" android:label="@string/about_us_label"></activity>
 		<activity android:name=".ContactDetailActivity" android:label="@string/intelligrape_contact_us_label"></activity>
-		<activity android:name="com.intelligrape.apps.igdroid.ContactMailActivity" android:label="@string/contactDetailsMail"></activity>
+		<activity android:name=".ContactMailActivity" android:label="@string/contactDetailsMail"></activity>
+		<uses-library android:name="com.google.android.maps"/>
 	</application>
 </manifest>
